--- a/linux/debian/查看磁盘大小和可用空间.md
+++ b/linux/debian/查看磁盘大小和可用空间.md
@@ -202,6 +202,5 @@ head后面的-5表示显示前5行，不加数字则默认显示前10行
 
 
 以上。
-————————————————
-版权声明：本文为CSDN博主「lkforce」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/lkforce/article/details/80917306
+
+参考地址：https://blog.csdn.net/lkforce/article/details/80917306
